MODLD-363: Derive statementOfResponsibility from 245$c (#106)